Version 2.02.103 - 
======================================
  Fix 3min udev timeout so that it is applied for all LVM volumes.
  Fix RAID calculation for sufficient allocatable space.
  Conversion from linear to mirror or RAID1 now honors mirror_segtype_default.
  Add thin-performance configuration profile.
  Add lvm.conf allocation/thin_pool_chunk_size_calculation option.
  Fix contiguous & cling allocation policies for parity RAID.  (2.02.100)
  Set use_lvmetad=0 on lvmconf --enable-cluster, reset to default on --disable-cluster.
  Don't install separate command symlink in binary directory for 'lvm devtypes'.
  Add seg_size_pe field to reports.
  Support start+length notation with command line PE ranges.
  Exit cleanly with message when pvmove cannot restart because LV is inactive.

Version 2.02.102 - 23rd September 2013
======================================
  Fix missing build dependency for scripts subdir in Makefile.
  Extend lv_info() for more efficient lv_is_active_locally() check.
  Fix node up/down handling in clvmd corosync module.

Version 2.02.101 - 20th September 2013
======================================
  Fix 3-thread clvmd deadlock triggered by cleanup on EOF from client.
  Remove VG from lvmetad before restoring it with vgcfgrestore.
  Use strtoull instead of strtol in _get_int_arg.
  Add devtypes report command to display built-in recognised block device types.
  Fix CC Makefile override which had reverted to using built-in value. (2.02.75)
  Recognise bcache block devices in filter (experimental).
  Run lvm2-activation-net after lvm2-activation service to prevent parallel run.
  Add man page entries for lvmdump's -u and -l options.
  Fix lvm2app segfault while using lvm_list_pvs_free fn if there are no PVs.
  Improve of clvmd singlenode locking simulation.
  lvconvert no longer converts LVs of "mirror" segment type to thinpool.
  lvconvert no longer converts thinpool sub-LVs to "mirror" segment type.